# Iridium

./: .gitignore  LICENSE  README.md
Database/: Cargo.toml
Database/src/: decay_chain.rs  elemental.rs  future.rs  half_life.rs  lib.rs  update.rs
Nuclide/: Cargo.toml  atomic_mass.rs  decay.rs  decay_chain.rs  electro.rs  elemental.rs  half_life.rs  index.rs  ionization.rs  lib.rs  nuclide.rs  particle.rs  radii.rs  spinparity.rs  update.rs
Nuclide/examples/: molecule.rs  standard_atomic_mass.rs
Nuclide/src/: atom.rs  constant.rs  element.rs  estruct.rs  isomer.rs  lib.rs  mmodel.rs  nstruct.rs  nuclidedata.rs  particle.rs  periodicity.rs  quantum_electron.rs  rng.rs  traits.rs
Nuclide/src/decay/: decayimpl.rs  dhelper.rs  internal.rs  types.rs
Nuclide/src/nstruct/: core.rs  element.rs  isotope.rs  nuclidestruct.rs
Nuclide/src/nuclidedata/: atomic_mass.rs  decay_chain.rs  decaymodes.rs  element_translation.rs  half_life.rs  index.rs  ionization.rs  lang.rs  nuclidestruct.rs
Nuclide/tests/: element.rs  element_translation.rs  nuclidetest.rs
Pion/: baryon.rs  lepton.rs  lib.rs  meson.rs  photon.rs  quark.rs
src/: decay.rs  element.rs  main.rs  mmodel.rs  nuclidedata.rs  particle.rs  traits.rs
src/decay/: decayimpl.rs  type.rs
src/nstruct/: element.rs  isotope.rs
src/nuclidedata/: elemental.rs  spinparity.rs
