[package]
name = "Nuclide"
version = "0.2.0"
edition = "2021"
authors = ["J.A Sory jasory@rust-cas.org"]
description = "Database and simple modeling of all known nuclides"
keywords = ["atom","nuclide","isotope","elements","nuclear-physics"]
homepage = "https://rust-cas.org/physics/datasheets/nuclide.html"
repository = "https://github.com/JASory/Iridium"
license = "MIT"
categories = ["science"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Pion = "0.0.2"
strum = { version = "0.27.2" }
strum_macros = "0.27.2"
